--- a/index.html
+++ b/index.html
@@ -28,10 +28,18 @@
                 width: 100%;
                 height: 100%;
                 position: absolute;
-                background-image: url(./assets/svgs/background.svg);
-                background-size: cover;
-                background-repeat: no-repeat;
-                background-position: center center;
+            }
+
+            #splash-screen {
+                height: 100%;
+                width: 100%;
+                object-fit: contain;
+                position: absolute;
+                transform: translate(-50%, -50%);
+                left: 50%;
+                top: 50%;
+                background-color: #1919197a;
+                background: center / contain no-repeat url('./assets/images/splash-screen.jpg');
             }
 
             canvas {
@@ -104,4 +112,4 @@
             GAME_NAME: 'Wood Block Journey',
             GA_MEASUREMENT_ID: 'null',
             BUILD_VERSION: '3',
-        }</script><script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script></head><body><div id="app"></div><div id="lds-content" hidden><div id="lds-dual-ring"></div><div id="lds-text"><span id="lds-percent">0</span>% loaded</div></div><script src="sdk.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1;FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)}))}function initGoogleAnalytics(t,n){window.__GA_CONFIG.GAME_NAME;var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.bundle.js"></script><script defer="defer" src="engine.bundle.js"></script><script defer="defer" src="game.bundle.js"></script></body></html>
+        }</script><script src="https://unpkg.com/@vkontakte/vk-bridge/dist/browser.min.js"></script></head><body><div id="app"><div id="splash-screen"><div style="width: 100%;height: 100%;background: radial-gradient(375px, #000000c9, #00000000);"></div></div><div id="lds-content" hidden><div id="lds-dual-ring"></div><div id="lds-text"><span id="lds-percent">0</span>% loaded</div></div><script src="sdk.bundle.js"></script><script>"use strict";function initFbInstant(){var t=1;FBInstant.initializeAsync().then((function(){window.focus();var n=FBInstant.player.getID();FBInstant.getEntryPointAsync().then((function(t){initGoogleAnalytics(n,t)})).catch((function(){initGoogleAnalytics(n,"no_entry")})),window.__fbInstantInitiated=!0,window.__fbInstantLoadingTimer=setInterval((function(){FBInstant.setLoadingProgress(t++),t>=30&&clearInterval(window.__fbInstantLoadingTimer)}),80)}))}function initGoogleAnalytics(t,n){window.__GA_CONFIG.GAME_NAME;var i=window.__GA_CONFIG.BUILD_VERSION,a=window.__GA_CONFIG.GA_MEASUREMENT_ID;if("null"!=a){var e=FBInstant.getEntryPointData()||{},s=e.fbig_ad_id,o=e.fbig_adset_id,_=e.fbig_campaign_id,g=document.createElement("script");g.async=!0,g.src="https://www.googletagmanager.com/gtag/js?id="+a,document.head.appendChild(g),gtag("set","client_storage","none"),gtag("set","client_id","100."+t),gtag("set","user_id",t),gtag("set","send_page_view",!1),gtag("js",new Date),gtag("config",a,{cookie_flags:"SameSite=None;Secure",build:i,medium:n,campaign:_,groups:"GA"}),gtag("set","user_properties",{user_id:t,traffic_source:n,campaign_id:_,adset_id:o,ad_id:s}),gtag("event","app_launch",{send_to:"GA"}),window.__analyticsInitiated=!0}else window.__analyticsInitiated=!0}initFbInstant();</script><script defer="defer" src="vendors.bundle.js"></script><script defer="defer" src="engine.bundle.js"></script><script defer="defer" src="game.bundle.js"></script></div></body></html>
